// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<WithStyles(ForwardRef(Paper))
  className="paper"
  elevation={3}
  square={true}
>
  <WithStyles(ForwardRef(InputBase))
    className="input"
    data-qa="snap-qa"
    disabled={true}
    fullWidth={true}
    inputProps={
      Object {
        "aria-label": "Snaptest",
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyUp={[Function]}
    placeholder="Snaptest"
    value=""
  />
  <WithStyles(ForwardRef(IconButton))
    aria-label="Snaptest"
    className="inputButton"
    color="primary"
    disabled={true}
    onClick={[Function]}
    size="small"
  >
    <SearchIcon
      className="inputSVG"
    />
  </WithStyles(ForwardRef(IconButton))>
</WithStyles(ForwardRef(Paper))>
`;

exports[`Snapshot Testing Required Props 1`] = `
<WithStyles(ForwardRef(Paper))
  className="paper"
  square={true}
>
  <WithStyles(ForwardRef(InputBase))
    className="input"
    fullWidth={true}
    inputProps={
      Object {
        "aria-label": "Search...",
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyUp={[Function]}
    placeholder="Search..."
    value=""
  />
  <WithStyles(ForwardRef(IconButton))
    aria-label="Search..."
    className="inputButton"
    color="primary"
    onClick={[Function]}
    size="small"
  >
    <SearchIcon
      className="inputSVG"
    />
  </WithStyles(ForwardRef(IconButton))>
</WithStyles(ForwardRef(Paper))>
`;
